src/styles/style.css
/* ... */
nav ul > li a {
  display: flex;
  gap: 10px;
  align-items: flex-end;
}

nav ul li a > img {
  width: 20px;
}

.animate-icon {
  animation: rotate 2s linear infinite;
}

nav ul li > a:hover img {
  animation: rotate 2s linear infinite;
}

.dark-mode-img {
  margin-top: 20px;
  cursor: pointer;
  width: 25px;
  transition: 0.2s ease-in-out;
}

.dark-mode-img:hover {
  transform: scale(1.2);
}

nav ul a {
  color: var(--text-color);
  font-family: var(--primary-font);
}

/*******************LANDING PAGE*******************/
.landing-page {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  scroll-snap-type: y proximity;
  padding: 0 10rem;
  /* margin-bottom: 50px; */
}

.intro-text {
  /* width: 45%; */
  /* width: 30%;
  aspect-ratio: 1; */
  /* border: 0.5px solid var(--color-titles); */
  text-align: center;
  /* opacity: 0; */
  opacity: 1;
  transition: 1s ease-in-out;
  font-family: var(--primary-font);
  color: var(--text-color);
  font-size: 1.2rem;
  color: var(--color-titles);
}

.intro {
  width: 20%;
  aspect-ratio: 1;
  border: 0.5px solid var(--color-titles);
  position: relative;
}

.intro div {
  position: absolute;
  color: var(--color-titles);
  font-family: var(--primary-font);
  padding: 10px;
}

/*********CHANGE THIS TO VARIABLE***********/
.opacity-1 {
  opacity: 1;
}

/*******************PROJECTS*******************/
.projects,
.about {
  display: flex;
  justify-content: center;
  min-height: 100vh;
  opacity: 0;
  transition: opacity 1s ease-in-out;
}

.about.is-visible,
.projects.is-visible,
nav.is-visible,
footer.is-visible {
  opacity: 1;
}

.projects h4 {
  font-size: 1.25rem;
  font-weight: 400;
  font-family: var(--lg-text);
  color: var(--text-color-grey-title);
  cursor: default;
}

.project-card {
  width: 100%;
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  position: relative;
  margin-block-end: 1rem;
}

.project-card:not(:last-child) {
  margin-block-end: 1rem;
}

.project-card p {
  font-family: var(--lg-text);
  color: #9f9f9e;
  font-size: clamp(0.75rem, 1rem, 1.2rem);
  cursor: default;
}

.tools-used {
  width: fit-content;
  text-transform: uppercase;
  cursor: default;
  display: none;
}

.tools-used span {
  color: rgb(105, 105, 105);
  font-family: monospace;
  display: inline;
}

.project-btns {
  width: fit-content;
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

.external-links {
  display: flex;
  align-items: flex-end;
  font-family: var(--lg-text);
  gap: 1rem;
  font-weight: 300;
}

.external-links a {
  display: flex;
  gap: 5px;
  color: rgb(105, 105, 105);
}

.project-btns img {
  width: 0.8rem;
}

.read-more-btn {
  font-family: var(--lg-text);
  font-weight: 400;
  color: #9f9f9e;
}

/*******************ABOUT*********************/

.about img {
  width: 100%;
  /* display: none; */
}

.about-text-wrapper {
  display: flex;
  flex-direction: column;
  gap: 12px;
}

.about-text {
  /* opacity: 0; */
  font-family: var(--lg-text);
  font-weight: lighter;
  color: #9f9f9e;
  /* transition: 1s ease-in-out; */
}

/*******************FOOTER*******************/
footer {
  padding: var(--padding-nav-items);
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  display: flex;
  justify-content: space-between;
  align-items: flex-end;
  font-size: var(--li-font-size);
  /* opacity: 0; */
  transition: opacity 0.7s ease-in-out;
  /* backdrop-filter: blur(1px); */
}

footer ul li {
  list-style: none;
  display: flex;
  align-items: flex-end;
  gap: 10px;
}

footer a {
  color: var(--text-color);
  font-family: var(--primary-font);
}

footer img {
  width: 20px;
}

footer ul {
  display: flex;
  flex-direction: column;
  gap: 20px;
}

/***********ANIMATIONS************/
@keyframes rotate {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

/******MEDIA QUERIES********/
@media (max-width: 480px) {
  .body-home {
    height: 100%;
  }
  /* html {
    height: 100%;
  } */
  main {
    height: 100%;
    display: flex;
  }

  header:not(.header-home) {
    position: sticky;
    top: 0;
  }

  html:not(.home-html) {
    height: unset;
  }

  footer:not(.footer-home) {
    position: unset;
  }

  h2 {
    font-size: 1.3rem;
    text-transform: capitalize;
  }

  h4 {
    font-size: 1.2rem !important;
  }

  nav {
    padding: 1rem 2rem;
  }

  nav > a {
    height: fit-content;
    font-size: 1rem;
    font-weight: bolder;
  }

  nav > a > div {
    display: flex;
    gap: 5px;
  }

  nav ul li {
    padding: unset;
    font-size: 1rem;
  }

  footer {
    /* position: unset; */
    padding: 1rem;
    font-size: 1rem;
  }

  /* p {
    font-size: 1rem;
    letter-spacing: unset;
  } */

  .projects {
    position: relative;
  }

  .landing-page {
    /* gap: 1rem; */
    /* align-items: unset; */
    min-height: unset;
    padding: 0 2rem;
    /* height: calc(100%); */
  }

  .welcome-text {
    width: 80%;
    min-height: 10px;
    /* display: block; */
    /* display: none; */
    /* margin: 0 auto; */
  }

  .intro-text {
    width: unset;
    /* text-align: start; */
    font-size: 1rem;
    /* display: none; */
  }

  .section-wrapper {
    max-width: 100%;
    align-items: flex-start;
    justify-content: unset;
  }

  .projects {
    padding: 0 2rem 0 2rem;
    gap: 20px;
    /* top: 122px; */
    /* margin-block-start: 122px; */
  }

  .projects,
  .about {
    min-height: unset;
    margin-bottom: 8rem;
  }

  .project-card {
    max-width: unset;
  }

  .project-card p {
    font-size: clamp(0.85rem, 1rem, 1.1rem);
    margin-bottom: 0.5rem;
  }

  .tools-used {
    font-size: 0.75rem;
  }

  .project-btns {
    font-size: 1rem;
  }

  .about {
    padding: 0 2rem;
  }

  .about-wrapper {
    max-width: unset;
  }

  .about-text-wrapper {
    font-size: 1rem;
  }
}
/* ... */

